testdata/golden/sema/invalid/entrypoint_intrinsic/only.fmt
pragma module;

@entrypoint
@intrinsic
fn main();
